[project]
name = "inception-lookup-service-example"
version = "0.1.0"
description = "A simple example project for inception lookup service"
authors = [
    { name="INCEpTION Team" }
]
license = { text="Apache License 2.0" }
dependencies = [
    "uvicorn",
    "fastapi",
    "requests"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
